responsive layout grid

--- a/CSS Questions/answer10.html
+++ b/CSS Questions/answer10.html
@@ -6,17 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Answer 10</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" type="text/css" href="answer10.css">
 </head>
 
 <body>
-    <section class="container">
+    <div class="container">
 
-        <div class="mx-auto display">
-            <div class="bg-blue"></div>
-            <div class="bg-grey"></div>
-        </div>
-    </section>
+        <div class="nav1"></div>
+        <div class="nav2"></div>
+
+        <main></main>
+
+        <div class="box1"></div>
+        <div class="box2"></div>
+        <div class="box3"></div>
+
+        <footer></footer>
+    </div>
+
+
 </body>
 
 </html>
